redirect/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redirect
  namespace: redirect
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
